--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/.next"
+  "projects": [
+    {
+      "name": "retail-frontend",
+      "rootDirectory": "frontend",
+      "buildCommand": "npm run build",
+      "outputDirectory": ".next"
+    },
+    {
+      "name": "retail-backend",
+      "rootDirectory": "backend",
+      "buildCommand": "npm run build",
+      "outputDirectory": "."
+    }
+  ]
 }
+
 
