--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,9 @@
 {
-  "projects": [
-    {
-      "name": "retail-frontend",
-      "rootDirectory": "frontend",
-      "buildCommand": "npm run build",
-      "outputDirectory": ".next"
-    },
-    {
-      "name": "retail-backend",
-      "rootDirectory": "backend",
-      "buildCommand": "npm run build",
-      "outputDirectory": "."
-    }
-  ]
+  "buildCommand": "npm install --prefix frontend && npm run build --prefix frontend",
+  "outputDirectory": "frontend/.next",
+  "env": {
+    "NEXT_PUBLIC_API_URL": "https://retail-sales-backend.onrender.com"
+  }
 }
 
 
