--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "cd backend && node src/index.js",
     "dev": "cd backend && npm run dev",
-    "build": "cd backend && npm install && npx prisma generate && npx prisma db push --skip-generate"
+    "build": "cd backend && npm install"
   }
 }
+
 
